--- a/main.css
+++ b/main.css
@@ -355,8 +355,8 @@ body{
     font-weight: 100;
 }
 .swiper {
+    overflow: visible;
     margin-top: 100px;
-    overflow: visible !important;
   width: 400px;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -544,7 +544,7 @@ body{
         cursor: pointer;
     }
     .swiper{
-        overflow: hidden !important;
+        overflow: hidden;
     }
 }
 
